# Entropyforge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  entropyforge.spec  entropyforge_onedir.spec  pyproject.toml  requirements-lock.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  PACKAGING.md  README.md
examples/: README.md  generate_once.py
src/entropyforge/: __init__.py  __main__.py  config.py  crypto_core.py  i18n.py  logging_config.py  main.py  ui.py
src/entropyforge/locales/: ar.json  en.json
tests/: __init__.py  conftest.py  test_config.py  test_crypto.py  test_crypto_core_locale_keys.py  test_logging_config.py  test_main.py  test_property_crypto.py  test_smoke.py
