[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "entropyforge"
version = "0.2.0"
description = "Desktop app for cryptographically secure random passwords, keys, and integers (secrets-based CSPRNG)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "EntropyForge contributors" }]
keywords = [
  "cryptography",
  "secrets",
  "csprng",
  "customtkinter",
  "desktop",
  "password-generator",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "customtkinter>=5.2.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.0.0",
  "pre-commit>=4.0.0",
  "pyinstaller>=6.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/raoof128/entropyforge"
Documentation = "https://github.com/raoof128/entropyforge#readme"
Changelog = "https://github.com/raoof128/entropyforge/blob/main/CHANGELOG.md"
Issues = "https://github.com/raoof128/entropyforge/issues"

[project.scripts]
entropyforge = "entropyforge.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
entropyforge = ["locales/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["entropyforge"]
omit = [
  "*/entropyforge/ui.py",
  "*/entropyforge/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
fail_under = 88
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "RUF",
]
ignore = [
  "B008",
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
